# minimal-codex

./: README.md  pyproject.toml  repomix-output.xml
minimal_codex/: __init__.py  __main__.py  agent.py  apply_patch.py  context.py  features.py  plan_manager.py  prompt.md  prompt_templates.py  prompts.py  pty_shell.py  streaming.py  subagents.py  tools.py
minimal_codex/prompts/: agent-prompt-plan-mode-enhanced.md  explore.md  general_purpose.md  plan_mode.md  plan_mode_main.md  system_prompt.md
minimal_codex/prompts/subagent/: explore.md  general_purpose.md  plan.md
